--- a/app/views/user_mailer/user_aquisition_query.html.erb
+++ b/app/views/user_mailer/user_aquisition_query.html.erb
@@ -25,7 +25,12 @@
     <p>New Users: <%= @users.count %></p>
     <p>New Users from coupon codes: <%= @users.reject{|k,v| v.nil?}.count %></p>
     <br/>
-    
+    <% @users.each do |u, p| %>
+    <br/>
+    <p>
+      New user <%= u.id %> - code: <%= (p.nil?) ? "N/A" : p.code_text %>
+    </p>
+    <% end %>
     <hr/>
     
   </body>
