Adding view for query for new users

--- a/app/views/app_query/user_aquisition_new.html.haml
+++ b/app/views/app_query/user_aquisition_new.html.haml
@@ -1,6 +1,6 @@
 %h1 AppQuery#user_aquisition_new
 
-=form_tag({:controller => "app_query", :action => "user_aquisition_create", :method => "post") do
+=form_tag({:controller => "app_query", :action => "user_aquisition_create", :method => "post"}) do
   
   ="TIME ZONE "
   =time_zone_select( :request, :time_zone, nil, :default => "Pacific Time (US & Canada)" )
